<resources>
    <string name="app_name">PortofolioApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="flutter">Flutter</string>
    <string name="android">Android</string>
    <string name="experience">Experience</string>
    <string name="ui_ux">Ui Ux</string>
    <string name="setting">Settings</string>
    <string name="muhammad_azzam_rabbani">Muhammad Azzam Rabbani</string>
    <string name="nama">Muhammad Azzam Rabbani</string>
    <string name="android_developer_at_microsoft_as">Android Developer At Microsoft AS</string>
    <string name="tentang">Tentang</string>
    <string name="tentang_saya">Halo saya belajar di smk idn boarding school</string>
    <string name="documentation_link">Documentation Link</string>
    <string name="app_android_btn">%s App Android</string>
</resources>