<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/profileFragment">

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.azzam.portofolioapp.ui.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/androidFragment"
        android:name="com.azzam.portofolioapp.ui.AndroidFragment"
        android:label="@string/android"
        tools:layout="@layout/fragment_android" />
    <fragment
        android:id="@+id/experienceFragment"
        android:name="com.azzam.portofolioapp.ui.ExperienceFragment"
        android:label="@string/experience"
        tools:layout="@layout/fragment_experience" >
        <action
            android:id="@+id/action_experienceFragment_to_experienceDetailFragment"
            app:destination="@id/experienceDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/flutterFragment"
        android:name="com.azzam.portofolioapp.ui.FlutterFragment"
        android:label="@string/flutter"
        tools:layout="@layout/fragment_flutter" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.azzam.portofolioapp.ui.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/uiUxFragment"
        android:name="com.azzam.portofolioapp.ui.UiUxFragment"
        android:label="@string/ui_ux"
        tools:layout="@layout/fragment_ui_ux" />
    <fragment
        android:id="@+id/experienceDetailFragment"
        android:name="com.azzam.portofolioapp.ExperienceDetailFragment"
        android:label="Detail"
        tools:layout="@layout/fragment_experience_detail" >
        <argument
            android:name="experience"
            app:argType="com.azzam.portofolioapp.data.Portofolio" />
    </fragment>
</navigation>